--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=ugioni_integration-tests-jest
-sonar.organization=ugioni
+sonar.projectKey=Guzzatti_prova02-integration-tests-jest-GabrielGuzzatti
+sonar.organization=guzzatti
 sonar.projectName=Jest Integration Tests
 sonar.projectVersion=1.0
 sonar.sources=./test
